@@ -19,11 +19,10 @@ namespace ACE_RMCast
   Acknowledge::
   Acknowledge (Parameters const& params)
       : params_ (params),
-        hold_ (ACE_RMCAST_DEFAULT_MAP_SIZE),
+        hold_ (params.addr_map_size ()),
         cond_ (mutex_),
         nrtm_timer_ (params_.nrtm_timeout ()),
-        stop_ (false),
-        hold_(params_.addr_map_size ())
+        stop_ (false)
   {
   }
 
